Fix header alignment

--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ body {
     display:flex;
     flex-direction: row;
     padding: 16px;
-    margin-left: 50px;
-    margin-right: 50px;
+    justify-content: space-around;
+    align-content: center;
 }
 .header-link {
     display:flex;
-    margin-left:auto;
 }
 ul {
     display: flex;
@@ -30,6 +29,7 @@ a {
     font-size: 18px;
 }
 .logo {
+    display:flex;
     color: #F9FAF8;
     font-size: 24px;
 }
